# test

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: main.yml
DynamicLib/: CMakeLists.txt  DynamicLib.cpp  DynamicLib.h
StaticLib/: CMakeLists.txt  StaticLib.cpp
TestProject/: CMakeLists.txt  TestProject.cpp  TestProject.h
